# lakeflow-community-connectors

./: .gitignore  CLAUDE.md  COMPETITION_README.md  CONTRIBUTING.md  NEXT_STEPS.md  PRESENTATION.md  PULL_REQUEST_DESCRIPTION.md  PUSH_TO_FORK.md  README.md  debug_pipeline_spec.py  downloaded_queue_items.csv  get_particle_token.py  ingest.py  main.py  pyproject.toml  queue_teset.csv  requirements.txt  test_connection.py  test_direct.py  test_post_endpoints.py  test_prices_api.py
.claude/: engineering-workflow-design.md  settings.json
.claude/agents/: auth-spec-generator.md  connector-auth-guide.md  connector-auth-validator.md  connector-builder.md  connector-dev.md  connector-doc-writer.md  connector-spec-generator.md  connector-tester.md  connector-write-back-tester.md  create-connector.md  source-api-researcher.md  source-write-api-researcher.md
.claude/commands/: batch-develop-connectors.md  create-connector.md  develop-connector.md  validate-connector.md
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml
.github/workflows/: connector-self-review.yml  generate-merged-source-file.yml  publish-testpypi.yml  pylint.yml  required-ci-gate.yml  strip-ok-to-test.yml  strip-safe-to-test.yml  test_exclude.txt  tests.yml  verify-locks.yml
examples/osipi/: create_osipi_connection.py
lakeflow_community_connectors.egg-info/: PKG-INFO  SOURCES.txt
libs/: __init__.py  source_loader.py  spec_parser.py  utils.py
libs/test/: test_spec_parser.py  test_utils.py
output/: googlemaps_merged.py
pipeline/: __init__.py  ingestion_pipeline.py  lakeflow_connect_enricher.py  lakeflow_python_source.py
pipeline-config/: ingest-bkp.py
pipeline-spec/: example_ingest.py  example_microsoft_teams_ingest.py  example_microsoft_teams_simple_ingest.py
pipeline/test/: test_ingestion_pipeline.py
prompts/: README.md  alchemy_api.md  alchemy_api_post.md  generate_connector_spec_yaml.md  implement_connector.md  implement_write_back_testing.md  klaviyo_api.md  particle_api.md  review_connector_quality.md  test_and_fix_connector.md  validate_incremental_sync.md  vibe_coding_instruction.md
prompts/templates/: community_connector_doc_template.md  source_api_doc_template.md
requirements/: _pip.in  _pylint-extras.in  pylint.txt  root.txt  sources.txt  tools.txt
scripts/: merge_python_source.py  seed_amplitude.py  setup_venv_python314.sh  verify-commit-signing.sh
sources/: __init__.py
sources/aeso/: FINAL_SOLUTION.md  PIPELINE_CONFIG.md  README.md  SCD_TYPE1_SETUP.md  _generated_aeso_python_source.py  aeso.py  aeso_api_doc.md  requirements.txt
sources/alchemy/: README.md  _generated_alchemy_python_source.py  alchemy.py  alchemy_api_doc.md  connector_spec.yaml  pipeline_spec.yaml
sources/appsflyer/: _generated_appsflyer_python_source.py  appsflyer.py
sources/arcgis/: README.md  _generated_arcgis_python_source.py  _generated_arcgis_python_source_batch.py  arcgis.py  arcgis_api_doc.md
sources/azure_devops/: README.md  _generated_azure_devops_python_source.py  azure_devops.py  azure_devops_api_doc.md
sources/bingads/: README.md  _generated_bingads_python_source.py  bingads.py  bingads_api_doc.md  connector_spec.yaml
sources/elasticsearch/: README.md  _generated_elasticsearch_python_source.py  connector_spec.yaml  elasticsearch.py  elasticsearch_api_doc.md
sources/example/: _generated_example_python_source.py  example.py
sources/freshservice/: freshservice_dummy_data.py
sources/github/: __init__.py  _generated_github_python_source.py  github.py
sources/gmail/: .gitignore  CLEAN_HISTORY_GUIDE.md  CONTRIBUTING_GUIDE.md  DEMO_ACCESS.md  PULL_REQUEST_TEMPLATE.md  README.md  SETUP_GUIDE.md  SUBMISSION_CHECKLIST.md  _generated_gmail_python_source.py  connector_spec.yaml  get_refresh_token.py  gmail.py  gmail_api_doc.md
sources/google_analytics_aggregated/: README.md  _generated_google_analytics_aggregated_python_source.py  google_analytics_aggregated.py  google_analytics_aggregated_api_doc.md  pipeline_spec.example.py
sources/googlemaps/: README.md  _generated_googlemaps_python_source.py  connector_spec.yaml  (+2 more)
src/: ingest.py
src/databricks/labs/community_connector/sources/adme/: README.md  __init__.py  _generated_adme_python_source.py  adme.py  adme_api_doc.md  adme_schemas.py  connector_spec.yaml  pyproject.toml
src/databricks/labs/community_connector/sources/dicomweb/: README.md  __init__.py  _generated_dicomweb_python_source.py  connector_spec.yaml  dicomweb.py  dicomweb_client.py  dicomweb_datasource.py  dicomweb_parser.py  dicomweb_schemas.py  dicomweb_stream_reader.py  dicomweb_utils_ext.py  pyproject.toml
src/databricks/labs/community_connector/sources/google_user_activity/: README.md  __init__.py  connector_spec.yaml  google_user_activity.py  pyproject.toml
src/databricks/labs/community_connector/sources/h1_proof/: __init__.py  h1_proof.py  pyproject.toml
src/databricks/labs/community_connector/sources/hl7_v2/: README.md  __init__.py  _generated_hl7_v2_python_source.py  connector_spec.yaml  gcpreader.py  hl7_v2.py  hl7_v2_api_doc.md  hl7_v2_composites.py  hl7_v2_extractors.py  hl7_v2_parser.py  hl7_v2_schemas.py  pyproject.toml
src/databricks/labs/community_connector/sources/odata/: README.md  __init__.py  _contained.py  _generated_odata_python_source.py  _helpers.py  _partition.py  connector_spec.yaml  odata.py  odata_api_doc.md  pyproject.toml
src/databricks/labs/community_connector/sources/palantir/: README.md  __init__.py  _generated_palantir_python_source.py  connector_spec.yaml  ingest_notebook.py  palantir.py  palantir_api_doc.md  pipeline_spec.example.py  pyproject.toml
src/databricks/labs/community_connector/sources/qualys_container_security/: README.md  __init__.py  _generated_qualys_container_security_python_source.py  connector_spec.yaml  pyproject.toml  qualys_container_security.py  qualys_container_security_api_doc.md  qualys_container_security_schemas.py
templates/: README.md  community_connector_doc_template.md  connector_spec_template.yaml
tests/: lakeflow_connect_test_utils.py  schema_validator.py  test_suite.py  test_utils.py
(+1039 files in other folders)
