[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors"
version = "0.1.0"
description = "Lakeflow community connectors built on Spark Python Data Source API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=4.2,<5.0",
    "pydantic>=2.0.0,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0",
    "pytest-cov>=4.0.0,<7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["databricks*"]
exclude = ["databricks.labs.community_connector.sources*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Default ruff rules (E, F) plus:
#   I       — isort: import order / grouping (pylint C0411/C0412)
#   PLR1730 — consider-using-min-builtin (pylint R1730)
select = ["E", "F", "I", "PLR1730"]

[tool.pyrefly]
project-includes = ["**/*.py"]
project-excludes = []
search-path = []
disable-search-path-heuristics = true
ignore-missing-imports = ["*"]
ignore-errors-in-generated-code = true
