[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors"
version = "0.1.0"
description = "Lakeflow community connectors built on Spark Python Data Source API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # PySpark is provided by the Databricks runtime — declaring it as a
    # runtime dep here causes version conflicts when the wheel is installed
    # on a cluster (e.g. cluster has pyspark==4.1.0, lock wants >=4.2.0.dev0).
    # It stays available for local dev/test via the `dev` extra below.
    "pydantic>=2.0.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "pyjwt[crypto]>=2.4.0,<3.0",
    # source_simulator intercepts ``requests.Session.send`` to stand in for
    # live source APIs in tests. Matches the floor used by every per-source
    # pyproject.toml that depends on ``requests``.
    "requests>=2.28.0,<3.0",
]

[project.optional-dependencies]
dev = [
    # PySpark is intentionally unpinned (only a prerelease-permitting floor).
    # We adopt new PySpark APIs eagerly (VariantType, datasource,
    # streaming.datasource, pipelines) and want the lock to track upstream
    # as it ships, including dev/RC releases when GA isn't out. Hash pinning
    # in the lock still guarantees a specific wheel. The `>=4.2.0.dev0` floor
    # signals to uv that prereleases of 4.2 are eligible (PEP 440 ordering),
    # without committing to a specific version.
    "pyspark>=4.2.0.dev0",
    "pytest>=7.0.0,<9.0",
    "pytest-cov>=4.0.0,<7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["databricks*"]
exclude = ["databricks.labs.community_connector.sources*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Default ruff rules (E, F) plus:
#   I       — isort: import order / grouping (pylint C0411/C0412)
#   PLR1730 — consider-using-min-builtin (pylint R1730)
select = ["E", "F", "I", "PLR1730"]

[tool.pyrefly]
project-includes = ["**/*.py"]
project-excludes = []
search-path = []
disable-search-path-heuristics = true
ignore-missing-imports = ["*"]
ignore-errors-in-generated-code = true
