[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors-adme"
version = "0.1.0"
description = "ADME (Azure Data Manager for Energy / OSDU) connector for Lakeflow Community Connectors"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0,<3.0",
    "lakeflow-community-connectors>=0.1.0,<1.0",
]

[project.optional-dependencies]
azure-identity = [
    "azure-identity>=1.15.0,<2.0",
]
dev = [
    "pyspark>=3.5.0,<4.0",
    "pytest>=7.0.0,<9.0",
    "pytest-cov>=4.0.0,<7.0",
    "azure-identity>=1.15.0,<2.0",
]

[tool.setuptools]
packages = ["databricks.labs.community_connector.sources.adme"]

[tool.setuptools.package-dir]
"databricks.labs.community_connector.sources.adme" = "."

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml"]
