[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors-dicomweb"
version = "0.1.0"
description = "DICOMweb connector for Lakeflow Community Connectors"
requires-python = ">=3.10"
dependencies = [
    "lakeflow-community-connectors>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pyspark>=4.2.0.dev0",
    "pytest>=7.0.0,<9.0",
    "pytest-cov>=4.0.0,<7.0",
]

[tool.setuptools]
packages = ["databricks.labs.community_connector.sources.dicomweb"]

[tool.setuptools.package-dir]
"databricks.labs.community_connector.sources.dicomweb" = "."

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml"]
