[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors-google-user-activity"
version = "0.1.0"
description = "Google Workspace Reports API User Activity connector for Lakeflow Community Connectors"
requires-python = ">=3.10"
dependencies = [
    # PySpark is provided by the Databricks runtime; not declared here to
    # avoid install-time conflicts with the cluster's pyspark.
    "pydantic>=2.0.0,<3.0",
    "requests>=2.28.0,<3.0",
    "google-auth>=2.25.0,<3.0",
    "lakeflow-community-connectors>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pyspark>=4.2.0.dev0",
    "pytest>=7.0.0,<9.0",
    "pytest-cov>=4.0.0,<7.0",
]

[tool.setuptools]
packages = ["databricks.labs.community_connector.sources.google_user_activity"]

[tool.setuptools.package-dir]
"databricks.labs.community_connector.sources.google_user_activity" = "."

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml"]
