[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors-odata"
version = "0.1.0"
description = "OData v4 connector for Lakeflow Community Connectors"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=4.2.0.dev0",
    "requests>=2.31.0",
    "lakeflow-community-connectors>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0",
    "responses>=0.25.0",
]

[tool.setuptools]
packages = ["databricks.labs.community_connector.sources.odata"]

[tool.setuptools.package-dir]
"databricks.labs.community_connector.sources.odata" = "."

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]
