[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors-qualys-container-security"
version = "0.1.0"
description = "Qualys Container Security connector for Lakeflow Community Connectors"
requires-python = ">=3.10"
dependencies = [
  "pyspark>=4.2.0.dev0",
  "pydantic>=2.0.0,<3.0",
  "requests>=2.28.0,<3.0",
  "lakeflow-community-connectors>=0.1.0",
]

[tool.setuptools]
packages = ["databricks.labs.community_connector.sources.qualys_container_security"]

[tool.setuptools.package-dir]
"databricks.labs.community_connector.sources.qualys_container_security" = "."

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml"]
